--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
   <meta charset="utf-8">
   <title>Kaushal's Personal Website</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20 px">
     <tr>
-      <td><img src="images/Kaushal.jpg" alt="Kaushal Kishore's Picture"></td>
+      <td><img src="images/Kaushal.jpg" alt="Kaushal Picture"></td>
       <td><h1>Kaushal Kishore</h1>
       <p><em>Founder and CEO of <strong><a href="https://technocrypt.in">Technocrypt</a></strong></em></p>
       <p>I am a Web Designer. I am learning <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Web Development Course from Udemy by Angela Yu</a>.</p></td>
