--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <li>Email: hikkishore@gmail.com</li>
   </ul>
   <hr>
-  <h3>Contact Us</h3>
+  <h3>Contact Form</h3>
   <form action="mailto:hikkishore@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
     <input type="text" name="yourName" value=""><br>
