--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body style="background-color: #6EDCD9;>
   <table cellspacing="20 px">
     <tr>
-      <td><img src="images/Kaushal.jpg" alt="Kaushal Picture"></td>
+      <td><img src="images/Kaushal.png" alt="Kaushal Picture"></td>
       <td><h1>Kaushal Kishore</h1>
       <p><em>Founder and CEO of <strong><a href="https://technocrypt.in">Technocrypt</a></strong></em></p>
       <p>I am a Web Designer. I am learning <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Web Development Course from Udemy by Angela Yu</a>.</p></td>
