--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <title>Kaushal's Personal Website</title>
-  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body style="background-color: #6EDCD9;>
+<body style="background-color: #6EDCD9;">
   <table cellspacing="20 px">
     <tr>
       <td><img src="images/Kaushal.png" alt="Kaushal Picture"></td>
