--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Kaushal's Personal Website</title>
 </head>
 
-<body style="background-color: #6EDCD9;">
+<body style="background-color: #F7E2E2;">
   <table cellspacing="20 px">
     <tr>
       <td><img src="images/Kaushal.png" alt="Kaushal Picture"></td>
